# drf-post

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml  schema.yml
blog_drf/: asgi.py  pagination.py  settings.py  urls.py  wsgi.py
posts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_owner_profile.py  0003_rename_user_profile_owner.py
posts/models/: __init__.py  category.py  post.py  profile.py
posts/serializers/: __init__.py  category_serializer.py  post_serializer.py  profile_serializer.py  user_serializer.py
posts/services/: users_service.py
posts/tests/: factories.py  test_category_viewset.py  test_post_viewset.py  test_profile_view.py  test_user_view.py  util.py
posts/views/: __init__.py  category.py  post.py  profile_views.py  user_views.py
