[tool.poetry]
name = "blog-drf"
version = "0.1.0"
description = ""
authors = ["Sviatoslav Bobryshev <s.bobryshev@tg.dunice.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.291"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

